--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages",
   },
   "dependencies": {
     "@storybook/addon-a11y": "^6.3.12",
@@ -28,5 +30,6 @@
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
     "storybook-addon-a11y": "^3.1.9"
-  }
+  },
+  "homepage": "https://dukza.github.io/nextjs-mdx"
 }
