--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages",
+    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@storybook/addon-a11y": "^6.3.12",
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.3",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
+    "gh-pages": "^3.2.3",
     "storybook-addon-a11y": "^3.1.9"
   },
   "homepage": "https://dukza.github.io/nextjs-mdx"
