--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@storybook/addon-a11y": "^6.3.12",
     "classnames": "^2.3.1",
+    "framer-motion": "^5.5.5",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,7 +28,7 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "babel-loader": "^8.2.3",
-    "eslint": "8.1.0",
+    "eslint": "^8.5.0",
     "eslint-config-next": "11.1.2",
     "gh-pages": "^3.2.3",
     "storybook-addon-a11y": "^3.1.9"
