--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "export": "next export",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "deploy": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "deploy-pages": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@storybook/addon-a11y": "^6.3.12",
