--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "gh-pages": "^3.2.3",
     "storybook-addon-a11y": "^3.1.9"
   },
-  "homepage": "https://dukza.github.io/nextjs-mdx"
+  "homepage": "https://dukza.github.io/nextjs-mdx/"
 }
