--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "deploy-pages": "next build && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@storybook/addon-a11y": "^6.3.12",
